# visual-winelist

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .swift-format  .swiftlint.yml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  Package.swift  README.md  TODOS.md  VisualWinelist.entitlements  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Scripts/: bump-version.sh  eval-extraction.swift  ios-coverage-gate.sh  ios_coverage_gate.py  test-scan.py  validate-brave-hitrate.swift  version_sync.py
Sources/VisualWinelist/: VisualWinelistApp.swift
Tests/VisualWinelistTests/: BackendClientTests.swift  ImageCacheTests.swift  SSEParserTests.swift  StartupValidatorTests.swift  WineExtractionPromptTests.swift  WineListViewModelTests.swift  WineObjectTests.swift
backend/: Dockerfile  README.md  pyproject.toml
backend/backend/: config.py  main.py
backend/backend/db/: models.py  session.py
backend/backend/models/: telemetry.py  wine.py
backend/backend/prompts/: sommelier.py  wine_extraction.py
backend/backend/routers/: curate.py  health.py  scan.py  telemetry.py  wines.py
backend/backend/services/: brave_client.py  cache.py  ollama_client.py  sommelier.py
backend/tests/: conftest.py  eval_extraction.py  test_brave_client.py  test_cache.py  test_health.py  test_ollama_client.py  test_scan.py  test_schema_sync.py  test_sommelier.py  test_telemetry.py  test_version_sync.py  test_wines.py  validate_brave_hitrate.py
docs/deployment/: https-setup.md
docs/explanation/: architecture.md  design-decisions.md  technical-notes.md
docs/how-to/: evaluate-extraction.md  validate-brave-hitrate.md
docs/reference/: configuration.md  wine-schema.md
docs/tutorial/: first-scan.md
ios/: Package.swift  README.md  generate_icon.py  project.yml
ios/VisualWinelistIOS.xcodeproj/: project.pbxproj
resources/: README.md
shared/: wine-schema.json
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx
(+71 files in other folders)
